Fixed layout bug - icons getting too big at very large screen sizes.

--- a/index.css
+++ b/index.css
@@ -2,10 +2,10 @@
     padding: 0;
     margin: 0;
     border: 0;
-    vertical-align: baseline;
     box-sizing: border-box;
 }
-body {
+html{
+
     --TRANSITION_LENGTH: 2s;
     --LGA-start: #222222;
     --LGA-end: #444444;
@@ -13,6 +13,9 @@ body {
     --LGB-end: #FFFF99;
     --MAX-WIDTH: 1500px;
     --TOP-MENU-HEIGHT: 4rem;
+    scroll-padding-top: 4rem;
+}
+body {
     color: #EEE;
     background-color: #333;
     font-family: Arial, Helvetica, sans-serif;
@@ -21,9 +24,6 @@ body {
     margin-right: auto;
     max-width: var(--MAX-WIDTH);
     background: #333;
-    font-size: 1.1rem;
-    scroll-padding: var(--TOP-MENU-HEIGHT) 0 0 0px;
-    scroll-padding-top: var(--TOP-MENU-HEIGHT);
     overflow-x: hidden;
 }
 h1{
@@ -133,7 +133,6 @@ ul{
 }
 #carousel_automatic{
     background: rgba(0,0,0,0.5);
-    /* text-align: right; */
     margin: calc(var(--img-size)*0.02);
     background: rgba(0,0,0,0.5);
     border-radius: calc(var(--img-size)*0.02);
@@ -166,8 +165,10 @@ ul{
     z-index: 1;
 }
 #learning img{
-    width: 25vw;
-    height: 25vw;
+    width: 20vw;
+    height: 20vw;
+    max-width: calc( var(--MAX-WIDTH) / 4 );
+    max-height: calc( var(--MAX-WIDTH) / 4 );
 }
 @media (min-width: 1281px) {
     body{
@@ -179,7 +180,7 @@ ul{
     body{
         --img-size: 49vw;
         --TOP-MENU-HEIGHT: 3rem;
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
     #top_menu{ font-size: 1.5rem; }
 }
